tests/ui/consts/miri_unleashed/feature-gate-unleash_the_miri_inside_of_you.stderr
error[E0493]: destructor of `(T, u32)` cannot be evaluated at compile-time
  --> $DIR/feature-gate-unleash_the_miri_inside_of_you.rs:9:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^ - value is dropped here
   |                    |
   |                    the destructor for this type cannot be evaluated in constants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
